--- a/WebContent/yd_about_us.html
+++ b/WebContent/yd_about_us.html
@@ -62,44 +62,24 @@
 				</div>
 				<div class="our-list">
 					 <h3>人才招聘</h3>
-                        <h4> 饺耳世家正在招聘以下岗位的小伙伴，加入“饺耳团队”来，</h4>
-                        <p><strong>1、内容编辑</strong><br>
-                                                                            招聘人数：1-2人
-                        </p>
-                        <p>
-                        	<strong>岗位职责：</strong><br />
-							1、完成相关约稿、采访和文章撰写工作；<br />
-							2、根据全球移动互联网行业热点，及时撰写文章；<br />
-							3、编译外文；<br />
-							4、完成交办的其他临时任务。
-                        </p>  
-                        <p><strong>1、内容编辑</strong><br>
-                                                                            招聘人数：1-2人
-                        </p>
-                        <p>
-                        	<strong>岗位职责：</strong><br />
-							1、完成相关约稿、采访和文章撰写工作；<br />
-							2、根据全球移动互联网行业热点，及时撰写文章；<br />
-							3、编译外文；<br />
-							4、完成交办的其他临时任务。
-                        </p> 
-                        <p><strong>1、内容编辑</strong><br>
-                                                                            招聘人数：1-2人
-                        </p>
-                        <p>
-                        	<strong>岗位职责：</strong><br />
-							1、完成相关约稿、采访和文章撰写工作；<br />
-							2、根据全球移动互联网行业热点，及时撰写文章；<br />
-							3、编译外文；<br />
-							4、完成交办的其他临时任务。
-                        </p> 
-                        <p>
-                        	地      址：北京市朝阳区朝阳路69号<br />
-					                      电       话：010-80850472   18910622378  王经理<br />
-							面试时间：周一到周日 上午10:00到 下午17:00<br />
-							有意者请携带简历，在上述时间直接参加面试，无需预约。<br />
-                                                                             错过招聘时间，有意加入公司者可与王经理电话联系，另行约定面试时间。                                         
-                        </p>
+          <p>饺耳世家餐饮(北京）有限公司因发展经营需要，现面向社会招聘优秀服务人员</p>
+          <h4>1、服务员:招聘20名，男女不限，薪资面议</h4>
+          <ul class="mb20">
+            <li>岗位要求：</li>
+            <li>1、年龄：18—35周岁</li>
+            <li>2、身高：女160cm以上，男170cm以上</li>
+            <li>3、有无工作经验不限。（酒店会为您提供一个发展学习的平台）</li>
+          </ul>
+          <h4>2、营销经理:招聘10名，限女性，底薪加提成；薪资面议（有客户资源者优先）</h4>
+          <ul class="mb20">
+            <li>岗位要求：</li>
+            <li>1、限女性</li>
+            <li>2、有客户资源者优先</li>
+            <li>3、有无工作经验不限。（酒店会为您提供一个发展学习的平台）</li>
+          </ul>
+          <p>福利待遇：包吃包住，每月给员工过生日每月带薪4天休班</p>
+          <p>联系电话：010-8994  2510 / 010-8994  2012 / 13256192666</p>
+          <p>酒店地址：北京市朝阳区财满街69号</p>
 				</div>
 				<div class="our-list">
 					<h3>联系我们</h3>
